Fix DropDown alignment in Chromium 108

--- a/Radzen.Blazor/themes/components/blazor/_dropdown.scss
+++ b/Radzen.Blazor/themes/components/blazor/_dropdown.scss
@@ -83,6 +83,8 @@ $multiselect-checkbox-margin: 0 0.5rem 0 0 !default;
   @extend %input;
 
   .rz-helper-hidden-accessible {
+    overflow: initial;
+    
     input {
       height: 0;
       padding: 0;
